Fix Java 17 compile error by replacing List.getFirst().
List.getFirst() requires Java 21; use get(0) after the empty-page check instead.

Co-authored-by: Cursor <cursoragent@cursor.com>